# java-format-like-python

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cov.xml  formatter.py  other_test_file.java  setup.cfg  test_file.java
.github/workflows/: lint.yml  release.yml  test.yml
java_format_like_python/: __init__.py  formatter.py  main.py  utils.py
tests/: test_file.java  test_java_format_like_python.py
