[metadata]
name = java_format_like_python
version = attr: java_format_like_python.__version__
description = Simply run this program on your java files to turn them into python-esque beauties!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kksgandhi/java-format-like-python
author = Kutub Gandhi
author_email = kksgandhi@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.7
packages_data =
    java_format_like_python = py.typed

[options.entry_points]
console_scripts =
    j2p-fmt = java_format_like_python.main:main

[options.extras_require]
all =
    %(dev)s
    %(types)s
dev =
    pre-commit
    pytest
    setuptools>=46.4.0
types =
    types-setuptools

[isort]
profile = black

[flake8]
indent-size = 4
max-line-length = 120

[mypy]
python_version = 3.9
show_error_codes = True
pretty = True
strict = True
